[tool.poetry]
name = "geopuzzle"
version = "0.1.0"
description = ""
authors = ["TyVik <tyvik8@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
apidev-django-floppyforms = "*"
boto3 = "*"
channels = "*"
channels-redis = "*"
daphne = "*"
django = "^2.2"
django-admin-autocomplete-filter = "~0.7"
django-admirarchy = "*"
django-dotenv = "*"
django-enumfield = "*"
django-filter = "*"
django-json-widget = "*"
django-redis = "*"
django-redis-sessions = "*"
django-settings-export = "*"
django-storages = "*"
psycopg2-binary = "~2.8"  # https://github.com/psycopg/psycopg2/issues/1293
pillow = "*"
requests = "*"
sentry-sdk = "*"
social-auth-app-django = "*"
sorl-thumbnail = "*"
sparqlwrapper = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]
codecov = "*"
django-extensions = "*"
django-stubs = "*"
factory-boy = "^3.2"
gprof2dot = "*"
mypy = "*"
pylint = "*"
pylint-django = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
