[project]
name = "geopuzzle"
version = "0.2.0"
description = ""
authors = [
    {name = "TyVik", email = "geopuzzle@tyvik.ru"}
]
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    "boto3",
    "channels",
    "channels-redis",
    "daphne",
    "django==3.2.22",
    "django-admin-autocomplete-filter",
    "django-admirarchy",
    "django-dotenv",
    "django-enumfield",
    "django-filter",
    "django-json-widget",
    "django-redis",
    "django-redis-sessions",
    "django-settings-export",
    "django-storages",
    "gunicorn",
    "psycopg2-binary",
    "pillow",
    "requests",
    "sentry-sdk",
    "social-auth-app-django",
    "sorl-thumbnail",
    "sparqlwrapper",
    "tqdm"
]

readme = "README.md"

[project.urls]
#Homepage = "https://pdm.fming.dev"
#Repository = "https://github.com/pdm-project/pdm"
#Documentation = "https://pdm.fming.dev"
#Changelog = "https://pdm.fming.dev/latest/dev/changelog/"

[project.scripts]
pdm = "pdm.core:main"

[tool.pdm.scripts]
#pre_release = "python tasks/max_versions.py"
#release = "python tasks/release.py"
#test = "pytest"
#tox = "tox"
#doc = {shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview"}
#lint = "pre-commit run --all-files"
#complete = {call = "tasks.complete:main", help = "Create autocomplete files for bash and fish"}

[tool.pdm.dev-dependencies]
lint = [
    "mypy",
    "django-stubs",
    "pylint",
    "pylint-django",
]
test = [
    "codecov",
    "factory-boy"
]
prod = [
    "django-extensions",
    "gprof2dot"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
